# overlay-widget-for-qt

./: CMakeLists.txt  LICENSE  README.md  detailsdialog.cpp  detailsdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  overlay.cpp  overlay.h
